--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
@@ -289,18 +289,7 @@
 
 // Importer -------------------------------------------------------------------
 #package .checkbox {
-  min-height: 10px;
-  margin: 0;
-  padding: 0.3em;
-}
-
-// Importer options
-.historyStrategyOption {
-  input[type="radio"], input[type="checkbox"] {
-    min-height: 10px;
-    margin-top: 0;
-    margin-bottom: 0;
-  }
+  margin: 0 -2px 0 0;
 }
 
 // Viewer = changes -----------------------------------------------------------
