--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/htmlheader.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/htmlheader.vm
@@ -7,7 +7,8 @@
 #if("$!request.noDoctype" != "true")
 <!DOCTYPE html>
 #end
-<html xmlns="http://www.w3.org/1999/xhtml" lang="$xcontext.language" xml:lang="$xcontext.language">
+#macro(xwikiDataAttribute $name $value)data-xwiki-${name}="$escapetool.xml($value)"#end
+<html xmlns="http://www.w3.org/1999/xhtml" lang="$xcontext.language" xml:lang="$xcontext.language" #xwikiDataAttribute('document', $doc.fullName) #xwikiDataAttribute('wiki', $doc.wiki) #xwikiDataAttribute('space', $doc.space) #xwikiDataAttribute('page', $doc.name) #xwikiDataAttribute('version', $doc.version) #xwikiDataAttribute('rest-url', "${request.contextPath}/rest/wikis/${xcontext.database}/spaces/$escapetool.url(${doc.space})/pages/$escapetool.url(${doc.name})") #xwikiDataAttribute('form-token', "$!{services.csrf.token}")>
   <head>
     ## ---------------------------------------------------------------------------------------------------------------
     ## Ensure that the Content-Type meta directive is the first one in the header.
@@ -32,8 +33,11 @@
     ## Force Compatibility mode for IE browsers to use the latest rendering mode. In order to work, the declaration 
     ## needs to be placed in the <head>, before all other elements except for the <title> and other <meta> elements
     ## See http://msdn.microsoft.com/en-us/library/jj676915(v=vs.85).aspx#SETMODE
+    ## The 'if IE' tag is needed because this meta tag is actually invalid in HTML5, so we just enable it for IE.
     ## ---------------------------------------------------------------------------------------------------------------
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!--[if IE]>
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <![endif]-->
     ## ---------------------------------------------------------------------------------------------------------------
     ## Enable Responsiveness for phones
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -48,15 +52,14 @@
     ## For smart phones and tablets
     <link rel="apple-touch-icon" href="$xwiki.getSkinFile('icons/xwiki/favicon144.png')" />
     ## ---------------------------------------------------------------------------------------------------------------
-    ## Define the default scripting language that is used for intrinsic events (e.g. onmouseover attributes).
-    ## ---------------------------------------------------------------------------------------------------------------
-    <meta http-equiv="Content-Script-Type" content="text/javascript" />
-    ## ---------------------------------------------------------------------------------------------------------------
     ## Disable the toolbar that comes up when you mouse over an image in MSIE
     ## TODO: Shouldn't this be moved to the Admin Presentation preferences instead (user-defined META), since
-    ## it's possible to imagine that the user might want it?  
+    ## it's possible to imagine that the user might want it?
+    ## The 'if IE' tag is needed because this meta tag is actually invalid in HTML5, so we just enable it for IE.
     ## ---------------------------------------------------------------------------------------------------------------
-    <meta http-equiv="imagetoolbar" content="no"/>
+    <!--[if IE]>
+      <meta http-equiv="imagetoolbar" content="no"/>
+    <![endif]-->
     ## ---------------------------------------------------------------------------------------------------------------
     ## Universal edit button. See http://universaleditbutton.org
     ## ---------------------------------------------------------------------------------------------------------------
@@ -67,19 +70,6 @@
     ## Make sure search engine spiders give the plain page instead of ?viewer=comments, ?viewer=code etc.
     ## ---------------------------------------------------------------------------------------------------------------    
     <link rel="canonical" href="$doc.getURL('view')" />
-    ## ---------------------------------------------------------------------------------------------------------------
-    ## Store the space name, page name, wiki name, full document name (for convenience since it can be reconstructed
-    ## from the individual wiki/space/page names), and other metadata, so that it can be accessed from Javascript code.
-    ## For example, to pass it to the server side using an Ajax query.
-    ## Usage example: var name = $$("meta[name='page']")[0].content;
-    ## ---------------------------------------------------------------------------------------------------------------
-    <meta name="document" content="$escapetool.xml($doc.fullName)"/>
-    <meta name="wiki" content="$escapetool.xml($doc.wiki)"/>
-    <meta name="space" content="$escapetool.xml($doc.space)"/>
-    <meta name="page" content="$escapetool.xml($doc.name)"/>
-    <meta name="version" content="$doc.version"/>
-    <meta name="restURL" content="${request.contextPath}/rest/wikis/${xcontext.database}/spaces/$escapetool.url(${doc.space})/pages/$escapetool.url(${doc.name})"/>
-    <meta name="form_token" content="$!{services.csrf.token}"/>
     ## ---------------------------------------------------------------------------------------------------------------
     ## Localize GWT applications.
     ## ---------------------------------------------------------------------------------------------------------------
